--- a/index.html
+++ b/index.html
@@ -1,110 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>It's me</title>
-    <link rel="icon" href="img.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lokendra</title>
+    <link rel="icon" href="Myicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <!-- FontAwesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 
 <body>
-    <!-- Header session: all link to reach me -->
-    <header>
-        <h1>Lokendra Bhat</h1>
-        <section>
-            <a href="mailto:lokendrabhat.2022@gmail.com">lokendrabhat.2022@gmail.com</a>
-            <a href="https://www.facebook.com/lokendra.bhat.90" target="_blank">Facebook</a>
-            <a href="https://www.linkedin.com/in/lokendra-bhat-bb2b6b24a/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/LokendraBhat" target="_blank">GitHub</a>
-            <a href="https://www.credly.com/users/lokendra-bhat/badges">Credly</a>
+    <div class="container">
+        <!-- Header content -->
+        <section class="top">
+            <header>
+                <div class="header-logo">
+                    <a href="#">
+                        <h3><span style="color: #02abec;">My</span>Portfolio</h3>
+                    </a>
+                </div>
+                <!-- Header menu -->
+                <div class="header-menu">
+                    <nav id="sidemenu">
+                        <a href="#">Home</a>
+                        <a href="main.html">About</a>
+                        <a href="#">Services</a>
+                        <a href="#">Contact</a>
+                        <i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
+                    </nav>
+                    <i class="fa-solid fa-bars" onclick="openMenu()"></i>
+                </div>
+
+                <div class="header-icons">
+                    <a href="main.html">
+                        Reach Me
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                </div>
+            </header>
+
+            <!-- main body -->
+            <div class="main">
+                <div class="title">
+                    <h1>Hello, I'm <br>Lokendra Bhat</h1>
+                </div>
+                <div class="designation">
+                    <h3>- <span style="color: rgba(187, 45, 45, 0.795);">Dev</span><span style="color: #02abec;">Ops</span> Engineer</h3>
+                </div>
+                <div class="btns">
+                    <a href="#" class="btn btn-service">My services</a>
+                    <a href="main.html" class="btn btn-contact">Contact Me</a>
+                </div>
+            </div>
+
         </section>
-    </header>
+    </div>
 
-    <!-- About session: General description -->
-    <section>
-        <h2>About me</h2>
-        <p class="summary"><img src="img.jpg" 
-            alt="Loading...">
-            I am an IT student willing to pursue a rewarding career. 
-            <strong>"Success is not final, failure is not fatal"</strong> 
-            My ambition is to learn more and more I don't care if 
-            I fail or succeed, <strong>never give up</strong>. 
-        </p>
-    </section>
-
-    <!-- Education session: Academic detail -->
-    <section>
-        <h2>Education</h2>
-        <ul id="experience">
-            <li>
-                <b> B.Sc. CSIT - ASCOL</b> | 2019 - Present
-            </li>
-            <li>
-                <b> Science - Radiant</b> | 2017 - 2019
-            </li>
-        </ul>
-    </section>
-    <!-- Certification session: my certificate and training -->
-    <section>
-        <h2>Certification and Training</h2>
-        <ul id="experience">
-            <li>
-                <b> AWS Certified Cloud Practitioner</b> | Jul 21, 2023
-            </li>
-            <li>
-                <b> AWS Re/Start Training </b> | 2023
-            </li>
-        </ul>
-    </section>
-
-    <!-- Skill session: Skill highlight -->
-    <section>
-        <h2>Skills</h2>
-        <ul id="skills">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-            <li>Linux</li>
-            <li>SQL</li>
-            <li>JQuery</li>
-            <li>Python</li>
-            <li>PHP</li>
-        </ul>
-        <h2>Tools</h2>
-        <ul id="skills">
-            <li>Git and GitHub</li>
-            <li>AWS tool</li>
-        </ul>
-    </section>
-
-    <!-- Project session: Project detail -->
-    <!-- <section>
-        <h2>Projects</h2>
-        <ul id="projects">
-            <li>
-                <a href="#"></a>
-            </li>
-        </ul>
-    </section> -->
-
-    <!-- Contact form session: Not completed!!! Idea of submit comment -->
-    <section>
-        <h2>Contact Form</h2>
-        <form  id="contact-form">
-            <label for="name">Name: </label><input placeholder="Name" id="name" type="text" /><br>
-            <label for="email">Email: </label><input placeholder="Email" id="email" type="email" /><br>
-            <textarea placeholder="Message" id="message"></textarea><br>
-            <button type="submit" class="btn">SEND</button>
-            <button type="reset" class="btn">RESET</button>
-        </form>
-        <!-- <h2>Comment</h2>
-        <div id="comment"></div> -->
-    </section>
-
-    <!-- Footer session: Footer view -->
-    <footer>
-        <p id="copyright">Copyright &copy; Lokendra Bhat</p>
-    </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
